--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Multiple Timers</title>
+    <link rel="manifest" href="assets/manifest.json" />
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js"
+      integrity="sha384-VcI6S+HIsE80FVM1jgbd6WDFhzKYA0PecD/LcIyMQpT4fMJdijBh0I7Iblaacawc"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/images/icons/icon-128x128.png"
+      sizes="128x128"
+    />
     <style>
       * {
         font-family: Arial, Helvetica, sans-serif;
